--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
 
 :root {
     --primary-color: rgb(199, 194, 194);
     --secondary-color: rgb(185 185 187);
-    --tertiary-color: rgb(248, 120, 88);
+    --tertiary-color: rgb(250, 165, 143);
 }
 
 header {
@@ -73,11 +74,17 @@ section {
     background-size: cover;
     background-position: 80%;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    justify-content: flex-end;
+    flex-wrap: wrap-reverse;
     align-items: flex-start;
     background-attachment: fixed;
     height: 100px;
+}
+
+.subtitle {
+    position: absolute;
+    background-color: var(--primary-color);
+    
 }
 /*Hero style end*/
 
@@ -111,7 +118,6 @@ section {
     padding: 0px 20px 30px 200px;
     border-right: 5px solid black;
     font-size: 48px;
-    color: #616f77;
     text-align: center;
     margin: 20px;
 }
@@ -132,7 +138,6 @@ section {
     bottom: 50px;
     left: 10px;
     background-color: var(--tertiary-color);
-    color: #616f77;
     width: 100px;
     height: 60px;
     text-align: center;
@@ -152,11 +157,34 @@ section {
     bottom: 50px;
     left: 10px;
     background-color: var(--tertiary-color);
-    color: #616f77;
     width: 150px;
     height: 60px;
     text-align: center;
     margin:auto;
+}
+
+.password {
+    margin:auto;
+    position:relative;
+    padding: 10px;
+    background-color: var(--tertiary-color);
+    border: 10px solid var(--primary-color);
+}
+
+.password-info {
+    position: absolute;
+    bottom: 50px;
+    left: 10px;
+    background-color: var(--tertiary-color);
+    width: 200px;
+    height: 60px;
+    text-align: center;
+    margin:auto;
+}
+
+.row1 {
+    display: flex;
+    justify-content: space-between;
 }
 /*work style end*/
 
@@ -166,6 +194,15 @@ img {
     opacity: .6;
 }
 */
+
+.contact {
+    display: inline-flex;
+    background-color: var(--primary-color);
+    width: -webkit-fill-available;
+    justify-content: space-evenly;
+    font-size: 30px;
+}
+
 /*footer*/
 footer {
     background: var(--primary-color);
