--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ section {
 
 /*about me*/
 .about-me {
-    padding: 10px 20px 20px 0px;
+    padding: 10px 30px 20px 0px;
     background-color: var(--primary-color);
     display: flex;
     align-items: flex-start;
@@ -115,11 +115,12 @@ section {
 }
 
 .section-title {
-    padding: 0px 20px 30px 200px;
+    padding: 0px 20px 30px 150px;
     border-right: 5px solid black;
-    font-size: 48px;
+    font-size: 50px;
     text-align: center;
     margin: 20px;
+    width: 300px;
 }
 
 
@@ -176,7 +177,7 @@ section {
     bottom: 50px;
     left: 10px;
     background-color: var(--tertiary-color);
-    width: 200px;
+    width: 175px;
     height: 60px;
     text-align: center;
     margin:auto;
@@ -201,6 +202,7 @@ img {
     width: -webkit-fill-available;
     justify-content: space-evenly;
     font-size: 30px;
+    padding-top:100px;
 }
 
 /*footer*/
